# cognition

./: ARCHITECTURE.md  CHANGELOG.md  FILES_INVENTORY.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  __init__.py  control_hub.py  main.py  pyproject.toml  start.sh  start_voice_browser.sh  test_setup.py  test_stt.py  test_stt_simple.py
chrome_extension/: README.md  background.js  content.js  manifest.json
controllers/: __init__.py  browser_controller.py
parsers/: __init__.py  command_parser.py
services/: __init__.py  fish_stt.py  fish_stt_continuous_v2.py  fish_tts.py  local_stt.py  local_stt_whisper_backup.py
